<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        style="@style/Widget.Material3.CardView.Elevated"
        android:backgroundTint="@color/dark_surfaceVariant"/>

    <TextView
        android:id="@+id/txtHolidayDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_your_search"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_year"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_month"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnClearFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/dark_errorContainer"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>