<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorldCalendar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/round_bottom"
            android:backgroundTint="@color/light_primary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardBack"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="15dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_centerVertical="true"
                    style="@style/Widget.Material3.CardView.Filled">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/back"
                        android:scaleType="centerCrop"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins"
                    android:text="@string/revise_world_calendar"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewWorldCalendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"/>

        <TextView
            android:id="@+id/txtNoHolidaysFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_holidays_found"
            android:fontFamily="@font/poppins"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/filter"
        android:contentDescription="@string/todo" />

</RelativeLayout>